--- a/DatingApp.Api/appsettings.json
+++ b/DatingApp.Api/appsettings.json
@@ -10,5 +10,10 @@
   },
   "AppSettings": {
     "Token" : "super secret key"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dadvzgtti",
+    "ApiKey": "681877543878163",
+    "ApiSecret": "lx6kV1V_D7kZmCyzONyNZ9BWAM4" 
   }
 }
